fix: [CDNG-11075]: UI overlapping issue in delegate name column (#4553)
* fix: [CDNG-11075]: UI overlapping issue in delegate name column

* fix: overlapping issue in card

--- a/src/modules/10-common/components/DelegateSelectionLogs/DelegateSelectionLogs.module.scss
+++ b/src/modules/10-common/components/DelegateSelectionLogs/DelegateSelectionLogs.module.scss
@@ -7,4 +7,7 @@
   &:global(.bp3-card.bp3-elevation-0) {
     margin-top: var(--spacing-small) !important;
   }
+  .delegateName {
+    flex-shrink: 1 !important;
+  }
 }
